[package]
name = "kitchen-display-buttons"
authors = ["tjh"]
license = "MIT"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
mqtt = { git = "https://github.com/tjh-dev/mqtt", branch = "dev", version = "0.3.1", package = "tjh-mqtt", features = [
  "serde",
  "tokio-client",
  "url",
] }
serde = { version = "1.0.196", features = ["rc", "derive"] }
serde_yaml = "0.9.31"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
opt-level = "s"
lto = "fat"

[package.metadata.deb]
revision = ""
maintainer-scripts = "debian/"
systemd-units = { enable = true }
assets = [
  ["target/release/kitchen-display-buttons", "usr/local/bin/", "755"]
]
